force-app/main/default/objects/IDEB__c/IDEB__c.object-meta.xml
<CustomObject>
    <label>IDEB</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número de IDEB</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IDEB</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>