force-app/main/default/objects/IDEB__c/fields/Escola__c.field-meta.xml
<CustomField>
    <fullName>Escola__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escola</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IDEB</relationshipLabel>
    <relationshipName>IDEB</relationshipName>
    <type>Lookup</type>
</CustomField>