force-app/main/default/objects/IDEB__c/fields/IDEB__c.field-meta.xml
<CustomField>
    <fullName>IDEB__c</fullName>
    <label>IDEB</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>