force-app/main/default/objects/IDEB__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <label>Meta</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>